Fixing some SEO stuff to check out if this improves the score

--- a/web/index.html
+++ b/web/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-gb">
 
 <head>
   <base href="/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="William Verhaeghe">
+  <meta name="description" content="William Verhaeghe | Mobile Flutter developer, game dev and ML">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="William Verhaeghe">
+  <meta name="apple-mobile-web-app-title" content="William Verhaeghe | Mobile Flutter developer, game dev and ML">
 
   <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
@@ -31,7 +31,7 @@
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
 
-  <title>William Verhaeghe</title>
+  <title>William Verhaeghe | Mobile Flutter developer, game dev and ML</title>
   <link rel="manifest" href="manifest.json">
 </head>
 
