--- a/web/index.html
+++ b/web/index.html
@@ -37,6 +37,10 @@
 
 <body>
   <script>
+    const regExp = new RegExp("bot|google|baidu|bing|msn|teoma|slurp|yandex", "i");
+    if (regExp.test(navigator.userAgent)) {
+      window.flutterWebRenderer = "html";
+    }
     var serviceWorkerVersion = null;
     var scriptLoaded = false;
     function loadMainDartJs() {
